<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.codepath.simpletodo.EditItemActivity">

    <TextView style="@style/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/edit_title"
        android:id="@+id/tvEditTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <EditText style="@style/edit_item_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/etEditTitle"
        android:layout_below="@+id/tvEditTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/spinnerPriority"
        android:layout_alignEnd="@+id/spinnerPriority" />

    <TextView style="@style/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/edit_priority"
        android:id="@+id/tvEditPriority"
        android:layout_below="@+id/etEditTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner style="@style/edit_item_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerPriority"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/etEditTitle"
        android:layout_toRightOf="@+id/tvEditDueDate"
        android:layout_marginTop="50px"
        android:layout_alignRight="@+id/etEditDueDate"
        android:layout_alignEnd="@+id/etEditDueDate" />

    <TextView style="@style/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/edit_due_date"
        android:id="@+id/tvEditDueDate"
        android:layout_below="@+id/spinnerPriority"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText style="@style/edit_item_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/etEditDueDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvEditDueDate"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button style="@style/button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btnSaveEdit"
        android:onClick="onSaveItem"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/button_style" />

</RelativeLayout>
